--- a/detailed-pages/man-black.html
+++ b/detailed-pages/man-black.html
@@ -119,7 +119,7 @@
     </header>
     <main>
       <div class="main-page">
-        <h1>Mens' Jackets</h1>
+        <h1>Black Jacket for Men</h1>
         <section class="main-content-shop details-page">
                 <div>
                   <div class="product-image">
@@ -142,7 +142,7 @@
                       </div>
                       </div>
 
-                  <img src="../images/black-man.jpg" alt="Red Jacket for Men"/>
+                  <img src="../images/black-man.jpg" alt="Black Jacket for Men"/>
                   <div class="product-checkout">
                     <div class="sizes">
                       <p>Choose your size:</p>
