--- a/men.html
+++ b/men.html
@@ -33,7 +33,7 @@
     <header>
       <div>
         <div class="logo-section">
-          <a href="index.html">
+          <a href="./index.html">
             <img
               src="./images/rainy-days-logo.png"
               alt="Rainy Days Logo"
@@ -50,9 +50,10 @@
             <div class="your-cart">
               <p>Your cart</p>
               <img src="./images/cart-icon.png" alt="Cart Icon" class="cart-icon" />
-              <input onclick="showCart()" class="hidden checkbox-trigger" type="checkbox" id="yourcart1">
+              <input onclick="openOverlay()" class="hidden checkbox-trigger" type="checkbox" id="yourcart1">
               <div class="overlay cart-overlay">
                 <div class="overlay-inside cart">
+                  <span onclick="closeOverlay()" class="cart-closing">X</span>
                     <h2>Your Cart</h2>
                     <div id="cart-div"></div>
                     <button class="cta cta-red" type="cta" onclick="showModal()">Check Out</button>
@@ -90,9 +91,9 @@
         <input type="checkbox" id="hamburger-menu" onclick="handleHamburgerMenuButton()"/>
         <div class="navigation-mobile">
           <div class="shop-section">
-            <a href="men.html">Men</a>
-            <a href="women.html">Women</a>
-            <a href="outlet.html">Outlet</a>
+            <a href="./men.html">Men</a>
+            <a href="./women.html">Women</a>
+            <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
             <input type="text" placeholder="What are you looking for?" />
@@ -104,8 +105,8 @@
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact</a>
+            <a href="./about.html">About Us</a>
+            <a href="./about.html">Contact</a>
           </div>
         </div>
         <div class="info-section">
@@ -114,7 +115,7 @@
       </div>
     </header>
     <main>
-      <div class="main-page">
+      <div class="main-pages">
         <h1>Mens' Jackets</h1>
         <section class="main-content-shop">
           <div class="products">
