--- a/women.html
+++ b/women.html
@@ -34,7 +34,7 @@
     <header>
       <div>
         <div class="logo-section">
-          <a href="index.html">
+          <a href="./index.html">
             <img
               src="./images/rainy-days-logo.png"
               alt="Rainy Days Logo"
@@ -51,9 +51,10 @@
             <div class="your-cart">
               <p>Your cart</p>
               <img src="./images/cart-icon.png" alt="Cart Icon" class="cart-icon"/>
-              <input onclick="showCart()" class="hidden checkbox-trigger" type="checkbox" id="yourcart1">
+              <input onclick="openOverlay()" class="hidden checkbox-trigger" type="checkbox" id="yourcart1">
               <div class="overlay cart-overlay">
                 <div class="overlay-inside cart">
+                  <span onclick="closeOverlay()" class="cart-closing">X</span>
                     <h2>Your Cart</h2>
                     <div id="cart-div"></div>
                     <button class="cta cta-red" type="cta" onclick="showModal()">Check Out</button>
@@ -115,7 +116,7 @@
       </div>
     </header>
     <main>
-      <div class="main-page">
+      <div class="main-pages">
         <h1>Womens' Jackets</h1>
         <section class="main-content-shop">
           <div class="products">
