--- a/index.html
+++ b/index.html
@@ -55,38 +55,13 @@
                 alt="Cart Icon"
                 class="cart-icon"
               />
-      <!--        <label class="hidden checkbox-trigger" for="yourcart1"></label>   -->
-              <input
-                class="hidden checkbox-trigger"
-                type="checkbox"
-                id="yourcart1"
-              />
+              <input onclick="openOverlay()" class="hidden checkbox-trigger" type="checkbox" id="yourcart1">
               <div class="overlay cart-overlay">
-       <!--         <a href="index.html">    -->
                   <div class="overlay-inside cart">
+                    <span onclick="closeOverlay()" class="cart-closing">X</span>
                     <h2>Your Cart</h2>
                     <div id="cart-div"></div>
                     <button class="cta cta-red" type="cta" onclick="showModal()">Check Out</button>
-
-      <!--              <label class="hidden checkbox-trigger" for="order3"></label>
-                    <input
-                      class="hidden checkbox-trigger"
-                      type="checkbox"
-                      id="order3"
-                    />
-                    <div class="popup order-popup">
-                      <div
-                        class="has-background"
-                        style="
-                          background-image: url('./images/jackets-homepage.jpg');
-                        "
-                      >
-                        <div class="order-popup-text">
-                          <p>Thank you for your order.</p>
-                          <p>We have sent order confirmation to your email.</p>
-                        </div>
-                      </div>
-                    </div>  -->
                   </div>
                 </a>
               </div>
@@ -159,7 +134,7 @@
           <h1>OUR BEST DEALS</h1>
         </div>
         <div class="best-deals">
-        <div class="main-page-index">
+        <div class="main-pages">
           <h1>Womens' Jackets</h1>
           <section class="main-content-shop">
             <div class="products">
@@ -176,7 +151,7 @@
                   </div>
                   </section>
                   </div>
-                  <div class="main-page-index">
+                  <div class="main-pages">
                     <h1>Mens' Jackets</h1>
                     <section class="main-content-shop best-deals">
                       <div class="products">
@@ -193,7 +168,7 @@
                             </div>
                             </section>
                             </div>
-                    <div class="main-page-index">
+                    <div class="main-pages">
                       <h1>Outlet Jackets</h1>
                       <section class="main-content-shop">
                         <div class="products">
