--- a/detailed-pages/man-brown.html
+++ b/detailed-pages/man-brown.html
@@ -146,7 +146,11 @@
                     <div class="sizes">
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
-                      
+                    </div>
+                    <div class="price-details">
+                      <p>$121</p>
+                      <p>Color: Red</p>
+                      <p>Suitable for: rain, wind</p>
                     </div>
                     <div class="product-checkout-button">
                       <button class="cta" type="text" onclick="addToCart('Brown Jacket for Men', 10, '../images/brown-man.jpg', 150); snackbarFunction()">Add to Cart</button>                      
