--- a/detailed-pages/man-military.html
+++ b/detailed-pages/man-military.html
@@ -147,7 +147,11 @@
                     <div class="sizes">
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
-                      
+                    </div>
+                    <div class="price-details">
+                      <p>$121</p>
+                      <p>Color: Red</p>
+                      <p>Suitable for: rain, wind</p>
                     </div>
                     <div class="product-checkout-button">
                       <button class="cta" type="text" onclick="addToCart('Military Jacket for Men', 8, '../images/military-man.jpg', 169); snackbarFunction()">Add to Cart</button>                      
