--- a/detailed-pages/outlet-black.html
+++ b/detailed-pages/outlet-black.html
@@ -144,9 +144,13 @@
                     <div class="sizes">
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
-                      
                     </div>
                     <div class="product-checkout-button">
+                      <div class="price-details">
+                        <p>$121</p>
+                        <p>Color: Red</p>
+                        <p>Suitable for: rain, wind</p>
+                      </div>
                       <button class="cta" type="text" onclick="addToCart('Black Outlet Jacket for Men', 14, '../images/black-outlet.jpg', 110); snackbarFunction()">Add to Cart</button>                      
 
                     </div>
@@ -197,9 +201,7 @@
                 </div>
               </div>
               </div>
-        
             </div>
-
             <div id="snackbar">Some text some message..</div>
 
     <script src="../js/cart.js"></script>
