--- a/detailed-pages/woman-black.html
+++ b/detailed-pages/woman-black.html
@@ -144,11 +144,14 @@
                     <div class="sizes">
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
-                      
+                    </div>
+                    <div class="price-details">
+                      <p>$121</p>
+                      <p>Color: Red</p>
+                      <p>Suitable for: rain, wind</p>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text" onclick="addToCart('Black Jacket for Women', 2, '../images/black-woman.jpg', 156); snackbarFunction()">Add to Cart</button>                      
-
+                      <button class="cta" type="text" onclick="addToCart('Black Jacket for Women', 2, '../images/black-woman.jpg', 156); snackbarFunction()">Add to Cart</button>
                     </div>
                   </div>
                   </div>
