--- a/detailed-pages/woman-white.html
+++ b/detailed-pages/woman-white.html
@@ -138,17 +138,19 @@
                         <a href="https://no.trustpilot.com/">Read reviews >></a>
                       </div>
                       </div>
-
                   <img src="../images/white-woman.jpg" alt="White Jacket for Women"/>
                   <div class="product-checkout">
                     <div class="sizes">
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
-                      
+                    </div>
+                    <div class="price-details">
+                      <p>$121</p>
+                      <p>Color: Red</p>
+                      <p>Suitable for: rain, wind</p>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text" onclick="addToCart('White Jacket for Women', 5, '../images/white-woman.jpg', 190); snackbarFunction()">Add to Cart</button>                      
-
+                      <button class="cta" type="text" onclick="addToCart('White Jacket for Women', 5, '../images/white-woman.jpg', 190); snackbarFunction()">Add to Cart</button>
                     </div>
                   </div>
                   </div>
