--- a/detailed-pages/woman-yellow.html
+++ b/detailed-pages/woman-yellow.html
@@ -138,24 +138,25 @@
                         <a href="https://no.trustpilot.com/">Read reviews >></a>
                       </div>
                       </div>
-
                   <img src="../images/yellow-woman.jpg" alt="Yellow Jacket for Women"/>
                   <div class="product-checkout">
                     <div class="sizes">
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
-                      
+                    </div>
+                    <div class="price-details">
+                      <p>$121</p>
+                      <p>Color: Red</p>
+                      <p>Suitable for: rain, wind</p>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text" onclick="addToCart('Yellow Jacket for Women', 4, '../images/yellow-woman.jpg', 220); snackbarFunction()">Add to Cart</button>                      
-
+                      <button class="cta" type="text" onclick="addToCart('Yellow Jacket for Women', 4, '../images/yellow-woman.jpg', 220); snackbarFunction()">Add to Cart</button>
                     </div>
                   </div>
                   </div>
                 </div>
               </div>
             </div>
-
     </main>
     <footer>
       <div class="footer">
@@ -197,11 +198,8 @@
                 </div>
               </div>
               </div>
-        
             </div>
-
             <div id="snackbar">Some text some message..</div>
-
     <script src="../js/cart.js"></script>
     <script src="../js/modal-script.js"></script>
     <script src="../js/hamburger-menu-script.js"></script>
