--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="Search.." />
+            <input type="text" placeholder="What are you looking for?" />
             <img
               src="./images/search-icon.png"
               alt="Search Icon"
@@ -103,7 +103,7 @@
             <a href="outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="Search.." />
+            <input type="text" placeholder="What are you looking for?" />
             <img
               src="./images/search-icon.png"
               alt="Search Icon"
@@ -141,6 +141,7 @@
               <div class="product">
                 <div class="product-clickable">
                   <img src="./images/orange-woman.jpg" alt="Orange Jacket for Women"/>
+                  <a href="./detailed-pages/woman-orange.html" class="show-product-link">Show product</a>
                   <div>
                     <p>$121</p>
                     <p>Color: Red</p>
@@ -158,6 +159,7 @@
                         <div class="product">
                           <div class="product-clickable">
                             <img src="./images/red-man.jpg" alt="Red Jacket for Men"/>
+                            <a href="./detailed-pages/man-red.html" class="show-product-link">Show product</a>
                             <div>
                               <p>$121</p>
                               <p>Color: Red</p>
@@ -175,6 +177,7 @@
                           <div class="product">
                             <div class="product-clickable">
                               <img src="./images/black-outlet.jpg" alt="Discounted Black Jacket for Men"/>
+                              <a href="./detailed-pages/outlet-black.html" class="show-product-link">Show product</a>
                                 <div>
                                   <p>$121</p>
                                   <p>Color: Red</p>
