--- a/detailed-pages/woman-orange.html
+++ b/detailed-pages/woman-orange.html
@@ -144,18 +144,20 @@
                     <div class="sizes">
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
-                      
+                    </div>
+                    <div class="price-details">
+                      <p>$121</p>
+                      <p>Color: Red</p>
+                      <p>Suitable for: rain, wind</p>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text" onclick="addToCart('Orange Jacket for Women', 1, '../images/orange-woman.jpg', 156); snackbarFunction()">Add to Cart</button>                      
-
+                      <button class="cta" type="text" onclick="addToCart('Orange Jacket for Women', 1, '../images/orange-woman.jpg', 156); snackbarFunction()">Add to Cart</button>
                     </div>
                   </div>
                   </div>
                 </div>
               </div>
             </div>
-
     </main>
     <footer>
       <div class="footer">
