--- a/detailed-pages/man-brown.html
+++ b/detailed-pages/man-brown.html
@@ -206,7 +206,7 @@
         
             </div>
 
-            <div id="snackbar">Some text some message..</div>
+            <div id="snackbar">Product added to the cart!</div>
 
     <script src="../js/cart.js"></script>
     <script src="../js/modal-script.js"></script>
