--- a/index.html
+++ b/index.html
@@ -147,47 +147,47 @@
                     <p>Color: Red</p>
                     <p>Suitable for: rain, wind</p>
                   </div>
+                </div>
+                </div>
+             </div>
+          </section>
+          </div>
+          <div class="main-pages">
+            <h1>Mens' Jackets</h1>
+              <section class="main-content-shop best-deals">
+               <div class="products">
+                 <div class="product">
+                    <div class="product-clickable">
+                      <img src="./images/red-man.jpg" alt="Red Jacket for Men"/>
+                      <a href="./detailed-pages/man-red.html" class="show-product-link">Show product</a>
+                    <div>
+                      <p>$121</p>
+                      <p>Color: Red</p>
+                      <p>Suitable for: rain, wind</p>
+                    </div>
+                    </div>
                   </div>
-                  </div>
-                  </div>
-                  </section>
+                </div>
+              </section>
                   </div>
                   <div class="main-pages">
-                    <h1>Mens' Jackets</h1>
-                    <section class="main-content-shop best-deals">
+                    <h1>Outlet Jackets</h1>
+                     <section class="main-content-shop">
                       <div class="products">
-                        <div class="product">
-                          <div class="product-clickable">
-                            <img src="./images/red-man.jpg" alt="Red Jacket for Men"/>
-                            <a href="./detailed-pages/man-red.html" class="show-product-link">Show product</a>
+                       <div class="product">
+                        <div class="product-clickable">
+                          <img src="./images/black-outlet.jpg" alt="Discounted Black Jacket for Men"/>
+                          <a href="./detailed-pages/outlet-black.html" class="show-product-link">Show product</a>
                             <div>
                               <p>$121</p>
                               <p>Color: Red</p>
                               <p>Suitable for: rain, wind</p>
                             </div>
-                            </div>
-                            </div>
-                            </div>
-                            </section>
-                            </div>
-                    <div class="main-pages">
-                      <h1>Outlet Jackets</h1>
-                      <section class="main-content-shop">
-                        <div class="products">
-                          <div class="product">
-                            <div class="product-clickable">
-                              <img src="./images/black-outlet.jpg" alt="Discounted Black Jacket for Men"/>
-                              <a href="./detailed-pages/outlet-black.html" class="show-product-link">Show product</a>
-                                <div>
-                                  <p>$121</p>
-                                  <p>Color: Red</p>
-                                  <p>Suitable for: rain, wind</p>
-                                </div>
-                            </div>
-                          </div>
                         </div>
-                        </section>
+                       </div>
                       </div>
+                      </section>
+                  </div>
       </div>
     </div>
     </main>
@@ -221,12 +221,12 @@
         </div>
       </div>
     </footer>
-            <!--Modal -->
+            <!--Check Out Modal -->
             <div id="checkOutModal" class="check-out-modal">
               <div class="check-out-modal-content">
                   <span class="close" onclick="closeModal()">&times;</span>
                 <div class="check-out-modal-body">
-                  <p>Thank you for your purchase</p>
+                  <p>Thank you for your purchase! We will email you shortly with your order details.</p>
                 </div>
                 </div>
               </div>
