--- a/about.html
+++ b/about.html
@@ -173,12 +173,12 @@
         </div>
       </div>
     </footer>
-            <!--Modal -->
+            <!--Check Out Modal -->
             <div id="checkOutModal" class="check-out-modal">
               <div class="check-out-modal-content">
                   <span class="close" onclick="closeModal()">&times;</span>
                 <div class="check-out-modal-body">
-                  <p>Thank you for your purchase</p>
+                  <p>Thank you for your purchase! We will email you shortly with your order details.</p>
                 </div>
                 </div>
               </div>
