--- a/detailed-pages/woman-yellow.html
+++ b/detailed-pages/woman-yellow.html
@@ -199,7 +199,7 @@
               </div>
               </div>
             </div>
-            <div id="snackbar">Some text some message..</div>
+            <div id="snackbar">Product added to the cart!</div>
     <script src="../js/cart.js"></script>
     <script src="../js/modal-script.js"></script>
     <script src="../js/hamburger-menu-script.js"></script>
