--- a/outlet.html
+++ b/outlet.html
@@ -154,7 +154,7 @@
             <section class="sign-up-section">
               <p>Looking for more good deals?</p>
               <p>Sign up to our newsletter!</p>
-              <button class="cta cta-red" type="cta">Sign Up</button>
+              <button onclick="showSignUpModal()" class="cta cta-red" type="cta">Sign Up</button>
             </section>
           </div>
           <section class="pushing-the-comfort-zone">
@@ -197,18 +197,27 @@
         </div>
       </div>
     </footer>
-            <!--Modal -->
+            <!--Check Out Modal -->
             <div id="checkOutModal" class="check-out-modal">
               <div class="check-out-modal-content">
                   <span class="close" onclick="closeModal()">&times;</span>
                 <div class="check-out-modal-body">
-                  <p>Thank you for your purchase</p>
+                  <p>Thank you for your purchase! We will email you shortly with your order details.</p>
                 </div>
                 </div>
               </div>
               </div>
         
             </div>
+              <!--Check Out Modal -->
+              <div id="signUpModal" class="check-out-modal">
+                <div class="check-out-modal-content">
+                  <span class="close" onclick="closeSignUpModal()">&times;</span>
+                    <div class="check-out-modal-body">
+                      <p>Thank you for your subscription!</p>
+                    </div>
+                </div>
+                </div>
     <script src="./js/cart.js"></script>
     <script src="./js/modal-script.js"></script>
   </body>
