--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
                       </section>
                   </div>
       </div>
+      <section class="sign-up-section">
+        <p>Looking for more good deals?</p>
+        <p>Sign up to our newsletter!</p>
+        <button onclick="showSignUpModal()" class="cta cta-red" type="cta">Sign Up</button>
+      </section>
     </div>
     </main>
     <footer>
