--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     ></script>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/modal.css" />
-    <link rel="stylesheet" href="./styles/cart.css" />
+    <link rel="stylesheet" href="./styles/snackbar.css" />
+
 
     <title>Rainy days | Home</title>
     <!-- Hotjar Tracking Code for https://silly-volhard-7894ac.netlify.app -->
@@ -238,8 +239,19 @@
               </div>
         
             </div>
+                          <!--Sign Up Modal -->
+                          <div id="signUpModal" class="check-out-modal">
+                            <div class="check-out-modal-content">
+                              <span class="close" onclick="closeSignUpModal()">&times;</span>
+                                <div class="check-out-modal-body">
+                                  <p>Thank you for your subscription!</p>
+                                </div>
+                            </div>
+                            </div>
     <script src="./js/hamburger-menu-script.js"></script>
     <script src="./js/cart.js"></script>
     <script src="./js/modal-script.js"></script>
+    <script src="./js/snackbar.js"></script>
+
   </body>
 </html>
