--- a/outlet.html
+++ b/outlet.html
@@ -209,7 +209,7 @@
               </div>
         
             </div>
-              <!--Check Out Modal -->
+              <!--Sign Up Modal -->
               <div id="signUpModal" class="check-out-modal">
                 <div class="check-out-modal-content">
                   <span class="close" onclick="closeSignUpModal()">&times;</span>
