--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="stylesheet" href="./styles/modal.css" />
     <link rel="stylesheet" href="./styles/cart.css" />
+    <link rel="stylesheet" href="./styles/about.css" />
     <title>Rainy days | Home</title>
     <!-- Hotjar Tracking Code for https://silly-volhard-7894ac.netlify.app -->
     <script>
