--- a/contact.html
+++ b/contact.html
@@ -207,7 +207,7 @@
                     <div class="field-error" id="messageError">
                         Your message must be at least 10 characters.
                     </div>
-                <button class="cta cta-red" type="submit" id="formButton" onclick="validateForm(); snackbarForm()">Send message</button>
+                <button class="cta cta-red" type="submit" id="formButton" onclick="validateForm();">Send message</button>
               </form>
             </div>
           </form>
@@ -262,7 +262,6 @@
     <script src="./js/cart.js"></script>
     <script src="./js/modal-script.js"></script>
     <script src="./js/contact-form.js"></script>
-    <script src="./js/snackbar.js"></script>
 
   </body>
 </html>
