--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h1>OUR BEST DEALS</h1>
         </div>
         <div class="best-deals">
-        <div class="main-pages">
+<!--        <div class="main-pages">
           <h1>Womens' Jackets</h1>
           <section class="main-content-shop">
             <div class="products">
@@ -188,7 +188,7 @@
                        </div>
                       </div>
                       </section>
-                  </div>
+                  </div>  -->
       </div>
       <section class="sign-up-section">
         <p>Looking for more good deals?</p>
@@ -252,6 +252,8 @@
     <script src="./js/cart.js"></script>
     <script src="./js/modal-script.js"></script>
     <script src="./js/snackbar.js"></script>
+    <script src="./js/wp-featured-products.js"></script>
+
 
   </body>
 </html>
