--- a/men.html
+++ b/men.html
@@ -119,7 +119,7 @@
         <h1>Mens' Jackets</h1>
         <section class="main-content-shop">
           <div class="products">
-            <div class="product">
+  <!--          <div class="product">
               <div class="product-clickable">
                 <img src="./images/red-man.jpg" alt="Red Jacket for Men"/>
                 <a href="./detailed-pages/man-red.html" class="show-product-link">Show product</a>
@@ -129,6 +129,7 @@
                   <p>Suitable for: rain, wind</p>
                 </div>
               </div>
+              
             </div>
             <div class="product">
               <div class="product-clickable">
@@ -184,8 +185,8 @@
                   <p>Suitable for: rain, wind</p>
                 </div>
               </div>
-            </div>
-          </div>
+            </div> -->
+          </div> 
           <section class="pushing-the-comfort-zone">
             <h2>Pushing the comfort zone</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ad, voluptatibus autem illum, alias dolorum 
@@ -241,5 +242,6 @@
       <script src="./js/cart.js"></script>
       <script src="./js/modal-script.js"></script>
       <script src="./js/hamburger-menu-script.js"></script>
+      <script src="./js/wp-products.js"></script>
   </body>
 </html>
