--- a/detailed-pages/product.html
+++ b/detailed-pages/product.html
@@ -119,6 +119,7 @@
     </header>
     <main>
       <div class="main-page">
+          <div class="loading-indicator"></div>
  <!--       <h1>Black Jacket for Men</h1>
         <section class="main-content-shop details-page">
                 <div>
