--- a/men.html
+++ b/men.html
@@ -71,11 +71,13 @@
           </div>
           <div class="search-section">
             <input type="text" placeholder="What are you looking for?" />
-            <img
+            <button class="search-button">Search</button>
+<!--            <img
               src="./images/search-icon.png"
               alt="Search Icon"
               class="search-icon"
             />
+            -->
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
@@ -116,6 +118,7 @@
     </header>
     <main>
       <div class="main-pages">
+        <div class="loading-indicator"></div>
         <h1>Mens' Jackets</h1>
         <section class="main-content-shop">
           <div class="products">
@@ -243,5 +246,6 @@
       <script src="./js/modal-script.js"></script>
       <script src="./js/hamburger-menu-script.js"></script>
       <script src="./js/wp-products.js"></script>
+      <script src="./js/search-button.js"></script>
   </body>
 </html>
