--- a/men.html
+++ b/men.html
@@ -70,7 +70,7 @@
             <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="What are you looking for?" />
+            <input id="inputField" type="text" placeholder="What are you looking for?" />
             <button class="search-button">Search</button>
 <!--            <img
               src="./images/search-icon.png"
@@ -98,12 +98,14 @@
             <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="What are you looking for?" />
-            <img
+            <input id="inputField" type="text" placeholder="What are you looking for?" />
+            <button class="search-button">Search</button>
+<!--            <img
               src="./images/search-icon.png"
               alt="Search Icon"
               class="search-icon"
             />
+            -->
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
@@ -246,6 +248,5 @@
       <script src="./js/modal-script.js"></script>
       <script src="./js/hamburger-menu-script.js"></script>
       <script src="./js/wp-products.js"></script>
-      <script src="./js/search-button.js"></script>
   </body>
 </html>
