--- a/women.html
+++ b/women.html
@@ -71,12 +71,14 @@
             <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="What are you looking for?" />
-            <img
+            <input id="inputField" type="text" placeholder="What are you looking for?" />
+            <button class="search-button">Search</button>
+<!--            <img
               src="./images/search-icon.png"
               alt="Search Icon"
               class="search-icon"
             />
+            -->
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
@@ -97,12 +99,14 @@
             <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="What are you looking for?" />
-            <img
+            <input id="inputField" type="text" placeholder="What are you looking for?" />
+            <button class="search-button">Search</button>
+<!--            <img
               src="./images/search-icon.png"
               alt="Search Icon"
               class="search-icon"
             />
+            -->
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
@@ -117,24 +121,26 @@
     </header>
     <main>
       <div class="main-pages">
+        <div class="loading-indicator"></div>
         <h1>Womens' Jackets</h1>
         <section class="main-content-shop">
           <div class="products">
-            <div class="product">
+  <!--          <div class="product">
               <div class="product-clickable">
-                <img src="./images/orange-woman.jpg" alt="Orange Jacket for Women"/>
-              <a href="./detailed-pages/woman-orange.html" class="show-product-link">Show product</a>
+                <img src="./images/red-man.jpg" alt="Red Jacket for Men"/>
+                <a href="./detailed-pages/man-red.html" class="show-product-link">Show product</a>
                 <div>
                   <p>$121</p>
                   <p>Color: Red</p>
                   <p>Suitable for: rain, wind</p>
-                </div>               
+                </div>
               </div>
+              
             </div>
             <div class="product">
               <div class="product-clickable">
-                <img src="./images/black-woman.jpg" alt="Black Jacket for Women"/>
-                <a href="./detailed-pages/woman-black.html" class="show-product-link">Show product</a>
+                <img src="./images/military-man.jpg" alt="Military Jacket for Men"/>
+                <a href="./detailed-pages/man-military.html" class="show-product-link">Show product</a>
                 <div>
                   <p>$121</p>
                   <p>Color: Red</p>
@@ -144,8 +150,8 @@
             </div>
             <div class="product">
               <div class="product-clickable">
-                <img src="./images/brown-woman.jpg" alt="Brown Jacket for Women"/>
-                <a href="./detailed-pages/woman-brown.html" class="show-product-link">Show product</a>
+                <img src="./images/orange-man.jpg" alt="Orange Jacket for Men"/>
+                <a href="./detailed-pages/man-orange.html" class="show-product-link">Show product</a>
                 <div>
                   <p>$121</p>
                   <p>Color: Red</p>
@@ -155,8 +161,8 @@
             </div>
             <div class="product">
               <div class="product-clickable">
-                <img src="./images/yellow-woman.jpg" alt="Yellow Jacket for Women"/>
-    <a href="./detailed-pages/woman-yellow.html" class="show-product-link">Show product</a>
+                <img src="./images/brown-man.jpg" alt="Brown Jacket for Men"/>
+                <a href="./detailed-pages/man-brown.html" class="show-product-link">Show product</a>
                 <div>
                   <p>$121</p>
                   <p>Color: Red</p>
@@ -166,8 +172,8 @@
             </div>
             <div class="product">
               <div class="product-clickable">
-                <img src="./images/white-woman.jpg" alt="White Jacket for Women"/>
-                <a href="./detailed-pages/woman-white.html" class="show-product-link">Show product</a>
+                <img src="./images/yellow-man.jpg" alt="Yellow Jacket for Men"/>
+                <a href="./detailed-pages/man-yellow.html" class="show-product-link">Show product</a>
                 <div>
                   <p>$121</p>
                   <p>Color: Red</p>
@@ -177,16 +183,16 @@
             </div>
             <div class="product">
               <div class="product-clickable">
-                <img src="./images/red-woman.jpg" alt="Red Jacket for Women"/>
-                <a href="./detailed-pages/woman-red.html" class="show-product-link">Show product</a>
+                <img src="./images/black-man.jpg" alt="Black Jacket for Men"/>
+                <a href="./detailed-pages/man-black.html" class="show-product-link">Show product</a>
                 <div>
                   <p>$121</p>
                   <p>Color: Red</p>
                   <p>Suitable for: rain, wind</p>
                 </div>
               </div>
-            </div>
-          </div>
+            </div> -->
+          </div> 
           <section class="pushing-the-comfort-zone">
             <h2>Pushing the comfort zone</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ad, voluptatibus autem illum, alias dolorum 
@@ -241,7 +247,7 @@
     <script src="./js/cart.js"></script>
     <script src="./js/modal-script.js"></script>
     <script src="./js/hamburger-menu-script.js"></script>
-
+    <script src="./js/wp-products.js"></script>
 
 
   </body>
