--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
                 </div>
                 </div>
               </div>
-              </div>
+              <!-- </div>
         
-            </div>
+            </div> -->
                           <!--Sign Up Modal -->
                           <div id="signUpModal" class="check-out-modal">
                             <div class="check-out-modal-content">
