--- a/index.html
+++ b/index.html
@@ -193,6 +193,13 @@
       <section class="sign-up-section">
         <p>Looking for more good deals?</p>
         <p>Sign up to our newsletter!</p>
+        <input
+        onkeyup="onSubscribeInputChange()"
+        id="subscribeInput"
+        type="email"
+        placeholder="Your Email"
+        class="input"
+      />
         <button onclick="showSignUpModal()" class="cta cta-red" type="cta">Sign Up</button>
       </section>
     </div>
